# Smart-Medical-Assistant

./: README.md  pyproject.toml
assistant/: assistant.py  embeddings_generator.py
assistant-2/: embeddings_generator.py  main.py
assistant-2/data/user-1/: current_symptoms.txt  personal_info.txt  recent_visits.txt
assistant-2/data/user-2/: current_symptoms.txt  personal_information.txt  recent_visits.txt
assistant-2/data/user-3/: current_symptoms.txt  personal_information.txt  recent_visits.txt
assistant/data/: allergies.txt  current_symptoms.txt  family_history.txt  immunizations.txt  medical_conditions.txt  personal_information.txt  recent_visits.txt  surgeries.txt
